<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TuferTVMenu</string>
    <string name="related_movies">Related Videos</string>
    <string name="degree">&#176;</string>
    <string name="whtertji">level</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: </string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="str_touchbar_back">Back</string>
    <string name="str_touchbar_home">Home</string>
    <string name="str_touchbar_task">Task</string>
    <string name="str_touchbar_input">Input</string>
    <string name="str_touchbar_menu">Menu</string>
    <string name="str_touchbar_volplus">Vol+</string>
    <string name="str_touchbar_volminus">Vol-</string>
    <string name="str_touchbar_blightplus">Blight+</string>
    <string name="str_touchbar_blightminus">Blight-</string>
    <string name="str_touchbar_brightnessplus">Bright+</string>
    <string name="str_touchbar_brightnessminus">Bright-</string>
    <string name="str_touchbar_channelplus">CH+</string>
    <string name="str_touchbar_channelminus">CH-</string>
    <string name="str_touchbar_whitepanel">WPanel</string>
    <string name="str_touchbar_screencomment">SComment</string>
    <string name="str_touchbar_screenshot">ScShot</string>
    <string name="str_touchbar_user">User</string>
    <string name="str_touchbar_defaultvalue">50</string>
    <string name="str_touchbar_taken_screenshot">Taken screenshot in /mnt/sdcard/screenshot sucessed!</string>
    <string name="str_sdcard_not_found">SD card not found!</string>
    <string name="source_changing">Source changing!</string>
    <string name="menu_cannot_use">Menu can not use!</string>
    <string name="input_cannot_use">Input can not use!</string>
    <string name="str_mainmenu_general">General</string>
    <string name="str_mainmenu_picture">Picture</string>
    <string name="str_mainmenu_sound">Sound</string>
    <string name="str_mainmenu_channel">Channel</string>
    <string name="str_mainmenu_network">Network</string>
    <string name="str_mainmenu_intelligence">Intelligence</string>
    <string name="str_mainmenu_system">System</string>
    <string name="str_mainmenu_about">About</string>
    <string name="str_mainmenu_content">Image</string>
    <string name="str_mainmenu_no_text" />
    <string name="str_mainmenu_default_val0">0</string>
    <string name="str_mainmenu_default_val50">50</string>
    <string name="str_mainmenu_default_switch_on">ON</string>
    <string name="str_mainmenu_default_switch_off">OFF</string>
    <string name="str_mainmenu_dialog_confirm">OK</string>
    <string name="str_mainmenu_dialog_cancel">Cancel</string>
    <string name="str_mainmenu_general_powerinput">Power Input</string>
    <string name="str_mainmenu_general_powerinput_android">android</string>
    <string name="str_mainmenu_general_appmanager">AppManager</string>
    <string name="str_mainmenu_general_wind">Auxiliary touch</string>
    <string name="str_mainmenu_general_timedate">Time/Date</string>
    <string name="str_mainmenu_general_weather">Weather</string>
    <string name="str_mainmenu_general_weather_time">Date</string>
    <string name="str_mainmenu_general_weather_icon">Weather</string>
    <string name="str_mainmenu_general_weather_temperature">Temperature</string>
    <string name="str_mainmenu_general_weather_weather">Weather Type</string>
    <string name="str_mainmenu_general_weather_wind">Wind</string>
    <string name="str_mainmenu_general_appmanager_name">Apply Name</string>
    <string name="str_mainmenu_general_appmanager_version">Version</string>
    <string name="str_mainmenu_general_appmanager_size">Size</string>
    <string name="str_mainmenu_general_appmanager_total_space">Total Space:</string>
    <string name="str_mainmenu_general_appmanager_free_space">Free Space:</string>
    <string name="str_mainmenu_general_weather_return">Return</string>
    <string name="str_mainmenu_general_weather_title">Weather query</string>
    <string name="str_mainmenu_general_weather_other">Other</string>
    <string name="weather_current_temperature">Current Temperature:</string>
    <string name="weather_today_weather">Today weather:</string>
    <string name="weather_today_temperature">Today Temperature:</string>
    <string name="weather_wind_power">Wind Power:</string>
    <string name="weather_careful">Reminder:</string>
    <string name="weather_query_city">Check the weather in other cities</string>
    <string name="weather_See_detail">Look at the weather for the next five days</string>
    <string name="input_city_name">Please enter the city name of the query:</string>
    <string name="str_mainmenu_general_weather_city">GuangZhou</string>
    <string name="str_mainmenu_general_weather_pm25">PM2.5</string>
    <string name="str_mainmenu_general_weather_pm25_val">48</string>
    <string name="str_mainmenu_general_weather_today">Today</string>
    <string name="str_mainmenu_general_weather_tomorrow">Tomorrow</string>
    <string name="str_mainmenu_general_weather_dat">Day after tomorrow</string>
    <string name="str_mainmenu_general_weather_today_date">Thursday</string>
    <string name="str_mainmenu_general_weather_temperature1">26℃~36℃</string>
    <string name="str_mainmenu_general_weather_current_temperature">30℃</string>
    <string name="str_mainmenu_general_weather_weather1">Sunny</string>
    <string name="str_mainmenu_general_weather_wind1">Breeze</string>
    <string name="str_mainmenu_general_weather_index">Index</string>
    <string name="str_mainmenu_general_weather_index_text0">----</string>
    <string name="str_mainmenu_general_weather_index_text1">--</string>
    <string name="str_mainmenu_general_weather_query">Weather query...</string>
    <string name="str_mainmenu_general_weather_query_error">Check no weather information.</string>
    <string name="str_mainmenu_general_weather_enter_city_name">Please enter a city name</string>
    <string name="str_mainmenu_general_weather_network_error">Network anomalies, can not check the weather, please check the network is available!</string>
    <string name="str_mainmenu_picture_picturemode">Picture Mode</string>
    <string name="str_mainmenu_picture_geometricadjust">GeometricAdj</string>
    <string name="str_mainmenu_picture_zoommode">Zoom Mode</string>
    <string name="str_mainmenu_picture_brightness">Brightness</string>
    <string name="str_mainmenu_picture_contrast">Contrast</string>
    <string name="str_mainmenu_picture_backlight">Back Light</string>
    <string name="str_mainmenu_picture_hue">Hue</string>
    <string name="str_mainmenu_picture_autoadjust">Auto Adjust</string>
    <string name="str_mainmenu_picture_imgnoisereduction">Img Noise Reduction</string>
    <string name="str_mainmenu_picture_color_temperature">Color Temp</string>
    <string name="str_mainmenu_picture_color_temperature_standard">Standard</string>
    <string name="str_mainmenu_picture_color_temperature_cold">Clod</string>
    <string name="str_mainmenu_picture_color_temperature_warm">Warm</string>
    <string name="str_mainmenu_picture_color_temperature_user">User</string>
    <string name="str_mainmenu_picture_picturemode_lightness">Lightness</string>
    <string name="str_mainmenu_picture_picturemode_standard">Standard</string>
    <string name="str_mainmenu_picture_picturemode_soft">Soft</string>
    <string name="str_mainmenu_picture_picturemode_user">User</string>
    <string name="str_mainmenu_picture_picturemode_game">Game</string>
    <string name="str_mainmenu_picture_picturemode_auto">Auto</string>
    <string name="str_mainmenu_picture_picturemode_pc">PC</string>
    <string name="str_mainmenu_picture_picturemode_vivid">VIVID</string>
    <string name="str_mainmenu_picture_picturemode_natural">Natural</string>
    <string name="str_mainmenu_picture_picturemode_sports">Sports</string>
    <string name="str_mainmenu_picture_geometricadjust_clock">Clock</string>
    <string name="str_mainmenu_picture_geometricadjust_phase">Phase</string>
    <string name="str_mainmenu_picture_geometricadjust_horizontal_pos">Horizontal Position</string>
    <string name="str_mainmenu_picture_geometricadjust_vertical_pos">Vertical Position</string>
    <string name="str_mainmenu_picture_zoommode_default">Default</string>
    <string name="str_mainmenu_picture_zoommode_16x9">16:9</string>
    <string name="str_mainmenu_picture_zoommode_4x3">4:3</string>
    <string name="str_mainmenu_picture_zoommode_auto">Auto</string>
    <string name="str_mainmenu_picture_zoommode_panoramamode">Panorama Mode</string>
    <string name="str_mainmenu_picture_zoommode_justscan">Just Scan</string>
    <string name="str_mainmenu_picture_zoommode_zoom1">Zoom1</string>
  <string name="str_cha_cainformation">CA Information</string>
    <string name="str_set_off">OFF</string>
  <string name="str_cha_antannatype">Antenna Type</string>
  <string name="str_lnbsetting_title">LNB Setting</string>
    <string name="str_cha_channel">channel</string>
    <string name="str_cha_autotuning">Automatic search</string>
    <string name="str_cha_dtvmanualtuning"> DTV manual search</string>
    <string name="str_cha_atvmanualtuning">ATV manual search</string>
    <string name="str_cha_bandwidth_switch">Bandwidth switching</string>
    <string name="str_cha_bandwidth_uhf_7mhz">7MHz over UHF</string>
    <string name="str_cha_signalinfo">Signal Information</string>
    <string name="str_cha_ciinformation"> CI information</string>
    <string name="str_cha_software_update_oad">Software Update (OAD)</string>
    <string name="str_cha_time_to_search_for_ssu">Time to Search for SSU</string>
    <string name="str_cha_time_to_search_for_ssu_default">4:00</string>
    <string name="str_cha_oadscan">OAD Scan</string>
    <string name="str_cha_oad_view_prompt">View Prompt to Update</string>
        <string name="system_restore_factory">Restore to Factory Default</string>
        <string name="notice_restore_factory">Restore to Factory Default will clear all user data on the device, including:</string>
        <string name="clear_google_user">.Google Account</string>
        <string name="system_and_app_set">.Data and settings of the system and applications</string>
        <string name="tv_data_restore">.TV data factory recovery</string>
        <string name="cancle">Cancle</string>
</resources>