<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="750dip"
        android:layout_height="450dip"
        android:background="@drawable/set_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:paddingLeft="40dip"
                android:paddingTop="10dip"
                android:text="@string/system_restore_factory"
                android:textColor="#CCCCCCCC"
                android:textSize="24sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:paddingLeft="50dip"
                android:text="@string/notice_restore_factory"
                android:textColor="#CCCCCCCC"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:paddingLeft="70dip"
                android:text="@string/clear_google_user"
                android:textColor="#CCCCCCCC"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:paddingLeft="70dip"
                android:text="@string/system_and_app_set"
                android:textColor="#CCCCCCCC"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:orientation="horizontal"
                android:paddingLeft="70dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_data_restore"
                    android:textColor="#CCCCCCCC"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@drawable/line" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dip">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="80dip"
                    android:layout_height="30dip"
                    android:layout_centerVertical="true"


                    android:background="@drawable/button_change"
                    android:text="@string/ok"
                    android:textColor="#FFFFFFFF"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/cancle_button"
                    android:layout_width="80dip"
                    android:layout_height="30dip"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/x100dp"

                    android:background="@drawable/button_change"
                    android:text="@string/cancle"
                    android:textColor="#FFFFFFFF"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>